Add path persistence improvements and Windows packaging support